--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Solicitar préstamo</h1>
+    <h1>Solicitar préstamo YA</h1>
     <button onclick="solicitarPrestamo()">Click aquí</button>
 </body>
 <script src="simulador.js"></script>
